✨ (order) added order form

--- a/HTML/keyboards.html
+++ b/HTML/keyboards.html
@@ -55,7 +55,7 @@
             <p class="price">R1550</p>
             <p><b>Switch Type: </b>Brown</p>
             <p><b>Form factor: </b>65%</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
@@ -64,7 +64,7 @@
             <p class="price">R1350</p>
             <p><b>Switch Type: </b>Brown</p>
             <p><b>Form factor: </b>TKL</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
@@ -73,7 +73,7 @@
             <p class="price">R1400</p>
             <p><b>Switch Type: </b>Blue</p>
             <p><b>Form factor: </b>TKL</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
@@ -82,7 +82,7 @@
             <p class="price">R1400</p>
             <p><b>Switch Type: </b>Brown</p>
             <p><b>Form factor: </b>TKL</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
@@ -91,7 +91,7 @@
             <p class="price">R1400</p>
             <p><b>Switch Type: </b>Red</p>
             <p><b>Form factor: </b>TKL</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
@@ -100,7 +100,7 @@
             <p class="price">R1000</p>
             <p><b>Switch Type: </b>Mech-Dome Tactile</p>
             <p><b>Form factor: </b>Full size</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
@@ -109,7 +109,7 @@
             <p class="price">R1450</p>
             <p><b>Switch Type: </b>Romer G Tactile</p>
             <p><b>Form factor: </b>Full size</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
@@ -118,7 +118,7 @@
             <p class="price">R600</p>
             <p><b>Switch Type: </b>'Mechanical like' membrane</p>
             <p><b>Form factor: </b>Full size</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
@@ -127,7 +127,7 @@
             <p class="price">R750</p>
             <p><b>Switch Type: </b>'Mechanical like' membrane</p>
             <p><b>Form factor: </b>Full size</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
@@ -136,7 +136,7 @@
             <p class="price">R750</p>
             <p><b>Switch Type: </b>'Mechanical like' membrane</p>
             <p><b>Form factor: </b>Full size</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
@@ -145,7 +145,7 @@
             <p class="price">R1000</p>
             <p><b>Switch Type: </b>Kailh box white</p>
             <p><b>Form factor: </b>Full size</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
@@ -155,7 +155,7 @@
             <p class="price">R2900</p>
             <p><b>Switch Type: </b>Yellow linear</p>
             <p><b>Form factor: </b>65%</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
@@ -164,7 +164,7 @@
             <p class="price">R2300</p>
             <p><b>Switch Type: </b>mecha-membrane</p>
             <p><b>Form factor: </b>Full Size</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
 
@@ -174,7 +174,7 @@
             <p class="price">R900</p>
             <p><b>Switch Type: </b>Low profile linear</p>
             <p><b>Form factor: </b>Full Size</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
@@ -183,7 +183,7 @@
             <p class="price">R1200</p>
             <p><b>Switch Type: </b>Low profile linear</p>
             <p><b>Form factor: </b>Full Size</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
@@ -192,7 +192,7 @@
             <p class="price">R760</p>
             <p><b>Switch Type: </b>Low profile blue clicky</p>
             <p><b>Form factor: </b>TKL</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
@@ -201,7 +201,7 @@
             <p class="price">R1000</p>
             <p><b>Switch Type: </b>Blue clicky</p>
             <p><b>Form factor: </b>Full Size</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
@@ -210,7 +210,7 @@
             <p class="price">R750</p>
             <p><b>Switch Type: </b>Blue clicky</p>
             <p><b>Form factor: </b>TKL</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
@@ -219,7 +219,7 @@
             <p class="price">R1200</p>
             <p><b>Switch Type: </b>Blue clicky</p>
             <p><b>Form factor: </b>TKL</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
@@ -228,7 +228,7 @@
             <p class="price">R700</p>
             <p><b>Switch Type: </b>Blue clicky</p>
             <p><b>Form factor: </b>TKL</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
@@ -237,7 +237,8 @@
             <p class="price">R1100</p>
             <p><b>Switch Type: </b>Black Linear</p>
             <p><b>Form factor: </b>Full Size</p>
-            <p><button>Order</button></p>
+            <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
+            
         </div>
 
 
