--- a/HTML/order.html
+++ b/HTML/order.html
@@ -30,32 +30,120 @@
       </div>
     </nav>
   </header>
-<!-- Vir Oupa -->
+  <!-- Vir Oupa -->
   <div class="about-section">
     <h1>Place an Order</h1>
     <p>Since we are a small company and our CEO developed this website himself, our ordering process is a bit janky if
       we do say so ourselves.
       Below you will find a form where you can fill out your details and state the product you are interested in and
       we will contact you to confirm stock availability and place your order.</p>
-    
+
   </div>
 
-  <div>
-    <p>fjkenjew</p>
-  </div>
+  <!-- <div>
+    <form method="post" action="https://forms.un-static.com/forms/d9019ca167334b2c4044a651bfe3392f7bc46ad4">
+      <input type="text" name="name" placeholder="Enter your name" required>
+      <input type="email" name="email" placeholder="Enter your e-mail address" required>
+      <textarea name="message" cols="40" rows="15"></textarea>
+      <button type="submit">Send</button>
+    </form>
+  </div> -->
 
+  <div class="formClass">
+    <form method="post" action="https://forms.un-static.com/forms/d9019ca167334b2c4044a651bfe3392f7bc46ad4">
+      <div class="row">
+        <div class="col-25">
+          <label for="fname">First Name</label>
+        </div>
+        <div class="col-75">
+          <input type="text" id="fname" name="firstname" placeholder="Your first name">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="lname">Last Name</label>
+        </div>
+        <div class="col-75">
+          <input type="text" id="lname" name="lastname" placeholder="Your last name">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="Email">Email</label>
+        </div>
+        <div class="col-75">
+          <input type="text" id="Email" name="Email" placeholder="Your Email">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="Item">Item</label>
+        </div>
+        <div class="col-75">
+          <select id="Item" name="Item">
+            <option value="keychron k2">Keychron K2</option>
+            <option value="keychron c1">Keychron C1</option>
+            <option value="keychron k8 blue">Keychron K8 Blue</option>
+            <option value="keychron k8 red">Keychron K8 Red</option>
+            <option value="keychron k8 brown">Keychron K8 Brown</option>
+            <option value="Logitech G213">Logitech G213</option>
+            <option value="Logitech G413">Logitech G413</option>
+            <option value="MSI Vigor GK30 no combo">MSI Vigor GK30 NO COMBO</option>
+            <option value="MSI Vigor GK30 white combo">MSI Vigor GK30 White Combo</option>
+            <option value="MSI Vigor GK30 black combo">MSI Vigor GK30 Black Combo</option>
+            <option value="MSI Vigor GK50">MSI Vigor GK50</option>
+            <option value="Razer Blackwidow V3 mini wireless">Razer Blackwidow V3 mini wireless</option>
+            <option value="Razer Ornata V2 Chroma">Razer Ornata V2 Chroma</option>
+            <option value="Redragon APAS PRO">Redragon APAS PRO</option>
+            <option value="Redragon APAS PRO wireless">Redragon APAS PRO WIRELESS</option>
+            <option value="Redragon APS">Redragon APS</option>
+            <option value="Redragon Aryaman">Redragon Aryaman</option>
+            <option value="Redragon Dark Avenger">Redragon Dark Avenger</option>
+            <option value="Redragon Horus">Redragon Horus Wireless</option>
+            <option value="Redragon Kumara">Redragon Kumara</option>
+            <option value="Redragon Ratri Silent">Redragon Ratri Silent</option>
+          </select>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="Item">Item</label>
+        </div>
+        <div class="col-75">
+          <select id="Delivery" name="Delivery">
+            <option value="Collection">Collection</option>
+            <option value="Collection">Delivery East Rand</option>
+            <option value="Collection">Delivery Elsewhere</option>
+          </select>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="Message">Special Message</label>
+        </div>
+        <div class="col-75">
+          <textarea id="Message" name="Message" placeholder="Write any extra information here"
+            style="height:200px"></textarea>
+        </div>
+      </div>
+      <div class="row">
+        <input type="submit" value="Submit">
+      </div>
+    </form>
+  </div>
 
   <div class="banking-details-section">
+    <h1>Payment Process:</h1>
+    <p>After your order is confirmed with us, payment can be made via EFT. Depending on which bank you use, payment can
+      take up to 2
+      business days to show in our account. Then, as soon as we have your product in hand from our supplier, you will be
+      notified and delivery arranged.</p>
     <h1>Banking Details</h1>
+    <p>Account Holder: KEY ELEMENT MODS (PTY) Ltd.</p>
     <p>Bank: Nedbank</p>
     <p>Account number: 1234250748</p>
     <p>Account type: Curent</p>
     <p>Reference: Your name and surname</p>
-    <h1>Payment Process:</h1>
-    <p>After your order is confirmed with us, payment can be made via EFT. Depending on which bank you use, payment can
-      take up to 2
-      business days to show in our account. Then as soon as we have your product in hand from ur supplier you will be
-      notified and delivery arranged.</p>
     <h1>Payments accepted:</h1>
     <p>We only accept EFT payments as having a credit card facility at our bank has big fees attached to it.</p>
     <h1>Delivery options:</h1>
