🚑 fixed keychron names again

--- a/HTML/keyboards.html
+++ b/HTML/keyboards.html
@@ -51,9 +51,9 @@
 
         <div class="card">
             <img src="../Images/Keychron K2.jpeg" alt="Keychron K2" style="width: 100%">
-            <h1>Keychron K2 Aliminium body</h1>
+            <h1>Keychron K2 Aluminium body</h1>
             <p class="price">R1550</p>
-            <p><b>Switch Type: </b>Brown</p>
+            <p><b>Switch Type: </b>Brown tactile</p>
             <p><b>Form factor: </b>65%</p>
             <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
@@ -62,34 +62,34 @@
             <img src="../Images/KK C1 brown R1350.jpg" alt="Keychron C1" style="width: 100%">
             <h1>Keychron C1</h1>
             <p class="price">R1350</p>
-            <p><b>Switch Type: </b>Brown</p>
+            <p><b>Switch Type: </b>Brown tactile</p>
             <p><b>Form factor: </b>TKL</p>
             <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
             <img src="../Images/KK K8 blue aluminum R1400.jpg" alt="Keychron K8" style="width: 100%">
-            <h1>Keychron K8 Aliminium body</h1>
+            <h1>Keychron K8 Aluminium body</h1>
             <p class="price">R1400</p>
-            <p><b>Switch Type: </b>Blue</p>
+            <p><b>Switch Type: </b>Blue clicky</p>
             <p><b>Form factor: </b>TKL</p>
             <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
             <img src="../Images/KK K8 brown aluminum R1400.jpg" alt="Keychron K8" style="width: 100%">
-            <h1>Keychron K8 Aliminium body</h1>
+            <h1>Keychron K8 Aluminium body</h1>
             <p class="price">R1400</p>
-            <p><b>Switch Type: </b>Brown</p>
+            <p><b>Switch Type: </b>Brown tactile</p>
             <p><b>Form factor: </b>TKL</p>
             <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
         <div class="card">
             <img src="../Images/KK K8 red aluminum R1400.jpg" alt="Keychron K8" style="width: 100%">
-            <h1>Keychron K8 Aliminium body</h1>
+            <h1>Keychron K8 Aluminium body</h1>
             <p class="price">R1400</p>
-            <p><b>Switch Type: </b>Red</p>
+            <p><b>Switch Type: </b>Red linear</p>
             <p><b>Form factor: </b>TKL</p>
             <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
@@ -143,7 +143,7 @@
             <img src="../Images/MSI Vigor GK50 Elite R1000.jpg" alt="MSI Vigor GK50" style="width: 100%">
             <h1>MSI Vigor GK50</h1>
             <p class="price">R1000</p>
-            <p><b>Switch Type: </b>Kailh box white</p>
+            <p><b>Switch Type: </b>Kailh box white clicky</p>
             <p><b>Form factor: </b>Full size</p>
             <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
