--- a/HTML/about.html
+++ b/HTML/about.html
@@ -33,7 +33,7 @@
 
   <div class="about-section">
     <h1>About Us Page</h1>
-    <p>Key Element Electronics is a company that was initially started to trade in mechanical keyboards and this is sill
+    <p>Key Element Electronics is a company that was initially started to trade in mechanical keyboards and this is still
       our speciality. We however
       later expanded to be a general electronics reseller. As can be seen by our selection of products we mainly focus
       on computer related electronics
