--- a/HTML/order.html
+++ b/HTML/order.html
@@ -145,7 +145,7 @@
     <p>Account type: Current</p>
     <p>Reference: Your name and surname</p>
     <h1>Payments accepted:</h1>
-    <p>We only accept EFT payments as having a credit card facility at our bank has big fees attached to it.</p>
+    <p>We only accept EFT payments at this time.</p>
     <h1>Delivery options:</h1>
     <p>Collection: If you are in the Pretoria area, collection can be arranged at our Faerie Glen office.</p>
     <p>Delivery in the East Rand: If you are in the East rand area in Gauteng our team will arrange delivery personally
