--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
   <div class="we-offer-section">
     <h1>Welcome!</h1>
-    <h1>Currently we offer a wide variety of mechanical keyboards but we aim to expand to a wide range of electronics very soon.</h1>
+    <h1>Currently we offer a wide variety of mechanical keyboards but we aim to expand to a wider range of electronics very soon.</h1>
   </div>
   <div class="feel-free-section">
     <h1>Feel free to browse our range of keyboards <a href="https://keyelementelectronics.github.io/HTML/keyboards.html">here</a></h1>
