--- a/HTML/Success.html
+++ b/HTML/Success.html
@@ -25,6 +25,7 @@
         <ul class="navbar-links">
           <li class="navbar-item"><a class="navbar-link" href="../HTML/about.html">About</a></li>
           <li class="navbar-item"><a class="navbar-link" href="../HTML/keyboards.html">Keyboards</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="../HTML/keycaps.html">Keycaps & Switches</a></li>
           <li class="navbar-item"><a class="navbar-link" href="../HTML/order.html">Place an Order</a></li>
         </ul>
       </div>
