--- a/HTML/order.html
+++ b/HTML/order.html
@@ -25,6 +25,7 @@
         <ul class="navbar-links">
           <li class="navbar-item"><a class="navbar-link" href="../HTML/about.html">About</a></li>
           <li class="navbar-item"><a class="navbar-link" href="../HTML/keyboards.html">Keyboards</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="../HTML/keycaps.html">Keycaps & Switches</a></li>
           <li class="navbar-item"><a class="navbar-link" href="../HTML/order.html">Place an Order</a></li>
         </ul>
       </div>
@@ -82,7 +83,7 @@
         <div class="col-75">
           <select id="Item" name="Item">
             <option value="keychron k2">Keychron K2</option>
-            <option value="keychron c1">Keychron C1</option>
+            <!-- <option value="keychron c1">Keychron C1</option> -->
             <option value="keychron k8 blue">Keychron K8 Blue</option>
             <option value="keychron k8 red">Keychron K8 Red</option>
             <option value="keychron k8 brown">Keychron K8 Brown</option>
@@ -98,10 +99,26 @@
             <option value="Redragon APAS PRO wireless">Redragon APAS PRO WIRELESS</option>
             <option value="Redragon APS">Redragon APS</option>
             <option value="Redragon Aryaman">Redragon Aryaman</option>
+            <option value="Redragon Castor Pro">Redragon Castor Pro</option>
             <option value="Redragon Dark Avenger">Redragon Dark Avenger</option>
-            <option value="Redragon Horus">Redragon Horus Wireless</option>
+            <option value="Redragon Dragonborn RGB">Redragon Dragonborn RGB</option>
+            <option value="Redragon Horus silver">Redragon Horus Wireless silver</option>
+            <option value="Redragon Horus black">Redragon Horus Wireless black</option>
+            <option value="Redragon Horus WIRED BLACK">Redragon Horus WIRED</option>
             <option value="Redragon Kumara">Redragon Kumara</option>
+            <option value="Redragon Noctis PRO wireless">Redragon Noctis PRO WIRELESS</option>
+            <option value="Redragon Noctis WIRED">Redragon Noctis WIRED</option>
             <option value="Redragon Ratri Silent">Redragon Ratri Silent</option>
+            <option value="Redragon Surara">Redragon Surara</option>
+
+            <option value="Redragon Speed Silver Switches">Redragon Speed Silver Switches</option>
+            <option value="Redragon Silent Peach Switches">Redragon Silent Peach Switches</option>
+            <option value="Redragon Peacock White Switches">Redragon Peacock White Switches</option>
+            <option value="Redragon Neon Pink Switches">Redragon Neon Pink Switches</option>
+            <option value="Redragon Black and White PBT Keycaps">Redragon Black and White PBT Keycaps</option>
+            <option value="Redragon White PBT pudding Keycaps">Redragon White PBT pudding Keycaps</option>
+            <option value="Redragon Pink PBT pudding Keycaps">Redragon Pink PBT pudding Keycaps</option>
+            <option value="Redragon Black PBT Keycaps">Redragon Black PBT Keycaps</option>
           </select>
         </div>
       </div>
