--- a/HTML/keycaps.html
+++ b/HTML/keycaps.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Keyboards</title>
+    <title>Keycaps and Switches</title>
     <link rel="stylesheet" type="text/css" href="../CSS/keyboards.css" />
 </head>
 
